# happy-eyeballs

./: Cargo.toml  README.md
.github/workflows/: claude.yml  mutants.yml  rust.yml
src/: lib.rs
tests/: connection_attempts.rs  dns_timing.rs  failure.rs  hostname_resolution.rs  https_records.rs  https_rr_cname.rs  integration.rs  network_config.rs  type_impls.rs
tests/common/: mod.rs
